# SE-Geometry

./: .clang-format  .flake8  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NEWS.rst  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-doc.txt  requirements-test.txt  setup.py  sitemap.xml  towncrier.toml  tox.ini
.changelog/: template.md  template.md.j2
.changelog/news/: 18.feature  2.feature  24.api  24.doc  24.feature  C673be98.doc  PR20.feature  PR22.docs  PR22.maint  PR23.docs  PR23.maint  PR26.maint
.github/: PULL_REQUEST_TEMPLATE.md  issue-branch.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  maintenance_report.md
.github/scripts/: collect_news.py  collect_news.sh  extract_sdist_info.sh  extract_wheel_info.sh  rename_test_packages.py  tweak_tag_in_cibw.py
.github/workflows/: build.yml  clear_runs.yml  comment.yml  event_user.yml  issue-branch-PR.yml  publish_doc.yml  publish_pypi.yml  release-drafter.yml  test.yml  wheels.yml
about/contributing/: index.html
about/history/: index.html
about/license/: index.html
about/motive/: index.html
cmake/: GitPybind11.cmake  HHinnatDate.cmake
dev-guide/dev-guide/: index.html
docs/: index.md
docs/about/: contributing.md  history.md  license.md  motive.md
docs/dev-guide/: dev-guide.md
docs/reference/: SunEarthAnalyzer.md  data.md
docs/user-guide/: install.md  usage.md
python/: CMakeLists.txt  analyzer.h  main.cpp  spa_analyzer.cpp  spa_interface.cpp  spa_interface.h
python/fseg/: _analyzer.py  _data.py
python/sun_earth_geometry/: __init__.py  _analyzer.py  _data.py
reference/SunEarthAnalyzer/: index.html
reference/data/: index.html
search/: search_index.json
src/: CMakeLists.txt
src/SPA/: spa.c  spa.h  spa_tester.c
src/cpp/: CMakeLists.txt  algorithm.cpp  algorithm.h  analyzer.h  main.cpp  spa_analyzer.cpp  spa_calculator.cpp  spa_calculator.h
src/cpp/include/: spa_calculator.h
src/python/fseg/: _analyzer.py  _data.py  _typing.py
src/python/fseg/impl/: __init__.py
tests/: CMakeLists.txt  case_data.py  case_data.toml  conftest.py  spa_tester.c  spa_tester.py  spa_tester2.py  test_algorithm_inputs.py  test_data.py  test_sun_earth_analyzer.py  test_sun_position_at.py
tests/deprecated/: spa_tester.py  spa_tester2.py
user-guide/install/: index.html
user-guide/usage/: index.html
