[build-system]
requires = [
  "setuptools >= 61.2.0",
  "wheel >= 0.37",
  "build >= 0.7",
  "versioningit >= 1.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "sun_earth_geometry"
authors = [{ "name" = "Mike Song", "email" = "gnosoir@hotmail.com" }]
urls = { "Homepage" = "https://github.com/mikesongming/sun_earth_analysis" }
description = "A python wrapper of sun-earth position algorithms"
readme = "README.md"
license = { text = "LGPL" }
dynamic = ["version", "requires-python"]

[tool.versioningit]
write.file = "python/sun_earth_geometry/_version.py"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]
default-tag = "0.0.0"

# Isort section
# Read more here: https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "black"
src_paths = ["python", "tests"]
known_first_party = ["sun_earth_geometry", "_sun_earth_geometry"]

# [tool.isort.import_headings]
# stdlib = "built-in"
# firstparty = "in project"
# thirdparty = "3rd-party"
# localfolder = "local"

# Black section
# Read more here: https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 88

# MyPy section
[tool.mypy]

# PyTest section
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
