[build-system]
requires = [
  "setuptools >= 61",
  "wheel >= 0.37",
  "build >= 0.7",
  "versioningit >= 2.0",
  "ninja >= 1.10",
  "wget >= 3.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "fseg"
authors = [{ "name" = "Mike Song", "email" = "gnosoir@hotmail.com" }]
urls = { "Homepage" = "https://mikesongming.github.io/SE-Geometry" }
description = "A python wrapper of algorithms for sun-earth geometry "
readme = "README.md"
license = { text = "LGPL-2.1" }
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: MacOS X",
  # "Environment :: GPU",
  # "Environment :: GPU :: NVIDIA CUDA",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)",
  "Operating System :: MacOS",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: GIS",
]
dynamic = ["version", "requires-python"]

# versioningit section
# Read more here: https://versioningit.readthedocs.io/en/stable/
[tool.versioningit]
write.file = "src/python/fseg/_version.py"
next-version = "smallest-release"

[tool.versioningit.vcs]
method = "git"
match = ["v*"]
default-tag = "0.0.0"

# Isort section
# Read more here: https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "black"
src_paths = ["python", "tests"]
known_first_party = ["fseg", "_fseg"]

# [tool.isort.import_headings]
# stdlib = "built-in"
# firstparty = "in project"
# thirdparty = "3rd-party"
# localfolder = "local"

# Black section
# Read more here: https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 88

# MyPy section
# Read more here: https://mypy.readthedocs.io/en/stable/
[tool.mypy]

# PyTest section
# Read more here: https://docs.pytest.org/ https://pytest-cov.readthedocs.io/en/latest/index.html
[tool.pytest.ini_options]
minversion = "7.0"
markers = [
  "mpi: mark tests for mpi implementation",
  "gpu: mark tests for gpu implementation",
]
addopts = """--cache-clear \
  --cov-report term-missing --cov=fseg \
  --cov-fail-under=80 --cov-branch \
  -rfExXs
  """
xfail_strict = true
testpaths = ["tests"]

# cibuildwheel section
# Read more here: https://cibuildwheel.readthedocs.io/en/stable/
[tool.cibuildwheel]
skip = "cp36-* cp37-* pp* *-manylinux_i686 *_aarch64 *_ppc64le *_s390x *-musllinux* *-win32 *_arm64"
build-verbosity = 1
build-frontend = "build"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
